<resources>
    <string name="app_name">DummyDictionary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_word">add word</string>
    <string name="agregar_palabra">agregar palabra</string>
    <string name="definici_n">Definición</string>
    <string name="palabra">Palabra</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">PASSWORD</string>
    <string name="user">USER</string>
</resources>