<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.flores.dummydictionary.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/sign_in"
            android:onClick="@{()-> viewModel.onLogin()}"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/user_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_gap"
            android:layout_marginEnd="@dimen/small_gap"
            android:layout_marginBottom="@dimen/default_gap"
            android:hint="@string/user"
            android:text="@={viewModel.userField}"
            app:layout_constraintBottom_toTopOf="@+id/password_textfield"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>




        <EditText
            android:id="@+id/password_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_gap"
            android:layout_marginEnd="@dimen/small_gap"
            android:layout_marginBottom="@dimen/default_gap"
            android:hint="@string/password"
            android:text="@={viewModel.passwordField}"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="144dp"
            android:layout_height="130dp"
            app:layout_constraintBottom_toTopOf="@+id/user_textfield"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?android:attr/actionModeFindDrawable" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>